--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,12 +52,6 @@ target_include_directories(
   "${PROJECT_NAME}" PRIVATE "${${PROJECT_NAME}_SOURCE_DIR}"
 )
 
-if(NOT METIER_BUNDLED_OPENTXS)
-  target_include_directories(
-    "${PROJECT_NAME}" SYSTEM PRIVATE "${opentxs_INCLUDE_DIRS}"
-  )
-endif()
-
 target_link_libraries(
   "${PROJECT_NAME}"
   PRIVATE
@@ -69,7 +63,7 @@ target_link_libraries(
     Qt::Widgets
     Threads::Threads
     metier-rpc
-    opentxs
+    opentxs::libopentxs
     qr-code-generator
 )
 
