--- a/src/models/CMakeLists.txt
+++ b/src/models/CMakeLists.txt
@@ -20,11 +20,5 @@ target_link_libraries(
   PUBLIC
     Qt::Core
     Qt::Gui
-    opentxs
+    opentxs::libopentxs
 )
-
-if(NOT METIER_BUNDLED_OPENTXS)
-  target_include_directories(
-    metier-common SYSTEM PRIVATE "${opentxs_INCLUDE_DIRS}"
-  )
-endif()
