--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = deps/opentxs
 	url = https://github.com/open-transactions/opentxs
 	shallow = false
+[submodule "deps/vcpkg-overlay"]
+	path = deps/vcpkg-overlay
+	url = https://github.com/Open-Transactions/vcpkg-overlay.git
+	shallow = true
