--- a/src/api/version.cpp.in
+++ b/src/api/version.cpp.in
@@ -17,28 +17,28 @@ using namespace opentxs::literals;
 auto Api::Domain() noexcept -> QString
 {
     // clang-format off
-    return QString::fromLocal8Bit(u8"@METIER_APP_DOMAIN@"_cstr);
+    return QString::fromLocal8Bit(u8"@METIER_APP_DOMAIN@");
     // clang-format on
 }
 
 auto Api::Name() noexcept -> QString
 {
     // clang-format off
-    return QString::fromLocal8Bit(u8"@PROJECT_NAME@"_cstr);
+    return QString::fromLocal8Bit(u8"@PROJECT_NAME@");
     // clang-format on
 }
 
 auto Api::Title() noexcept -> QString
 {
     // clang-format off
-    return QString::fromLocal8Bit(u8"@METIER_APPSTREAM_NAME@"_cstr);
+    return QString::fromLocal8Bit(u8"@METIER_APPSTREAM_NAME@");
     // clang-format on
 }
 
 auto Api::versionString(int suffix) -> QString
 {
     // clang-format off
-    static const auto name_{u8"@METIER_APPSTREAM_NAME@"_sv};
+    static const auto name_{u8"@METIER_APPSTREAM_NAME@"};
     static constexpr auto major_{@METIER_VERSION_MAJOR@};
     static constexpr auto minor_{@METIER_VERSION_MINOR@};
     static constexpr auto patch_{@METIER_VERSION_PATCH@};
