move cmake directory to PFL location

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ execute_process(
 list(
   APPEND
   CMAKE_MODULE_PATH
-  "${${PROJECT_NAME}_SOURCE_DIR}/cmake"
+  "${CMAKE_CURRENT_SOURCE_DIR}/tools/cmake"
 )
 
 # -----------------------------------------------------------------------------
