update vcpkg-overlay submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = deps/QR-Code-generator
 	url = https://github.com/nayuki/QR-Code-generator.git
 	shallow = true
-[submodule "deps/vcpkg-overlay"]
-	path = deps/vcpkg-overlay
-	url = https://github.com/Open-Transactions/vcpkg-overlay.git
+[submodule "vcpkg-overlay"]
+	path = external/vcpkg-overlay
+	url = https://github.com/Open-Transactions/vcpkg-registry
 	shallow = true
