--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -2,15 +2,17 @@
     "default-registry": {
         "kind": "git",
         "repository": "https://github.com/microsoft/vcpkg",
-        "baseline": "9d47b24eacbd1cd94f139457ef6cd35e5d92cc84"
+        "baseline": "c8696863d371ab7f46e213d8f5ca923c4aef2a00"
     },
     "registries": [
         {
             "kind": "git",
             "repository": "https://github.com/Open-Transactions/vcpkg-registry",
-            "baseline": "94595100a79055944f334540d2eb7f0a08a12121",
+            "baseline": "8cf52482da31f31cf86588f09e1e10af834439bd",
             "packages": [
-                "opentxs"
+                "boost-beast",
+                "opentxs",
+                "otcommon"
             ]
         }
     ]
