make common classes more customizable

--- a/src/metier/common/CMakeLists.txt
+++ b/src/metier/common/CMakeLists.txt
@@ -33,6 +33,7 @@ metier_add_source_file("${CMAKE_CURRENT_BINARY_DIR}/app.version.cpp")
 metier_add_source_file("api.cpp")
 metier_add_source_file("api.imp.cpp")
 metier_add_source_file("app.cpp")
+metier_add_source_file("app.imp.cpp")
 metier_add_source_file("claim.cpp")
 metier_add_source_file("convertblockchain.cpp")
 metier_add_source_file("license.cpp")
